Fixed Hero going over task bar | Fixed Submit button being too small | Changed color theme | Changed Some Text

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   background-color: #333;
   color: #fff;
-  opacity: 0.7;
+  opacity: 0.9;
   width: 100%;
   max-width: 100%;
   margin: auto;
@@ -14,6 +14,7 @@
   top: 0;
   padding: 0 30px;
   transition: 0.5s ease-in;
+  z-index: 500;
 
   & a {
     color: #fff;
@@ -40,4 +41,9 @@
     transform: scale(1.025);
     transition: 0.2s ease-in;
   }
+}
+
+.top {
+  background-color: rgba(4, 4, 4, 0.5);
+  // z-index: 10;
 }
