--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -11,8 +11,9 @@
 
   &:hover {
     opacity: 0.85;
-    transform: scale(1.1);
-    transition: 0.2s ease-in;
+    transform: scale(1.03);
+    transition: 0.1s ease-in;
+    cursor: pointer;
   }
 }
 
@@ -28,6 +29,13 @@
   background: $secondary-color;
   color: #fff;
   font-size: 1.2rem;
+}
+
+.btn-secondary:hover {
+  opacity: 0.85;
+  transform: scale(1.01);
+  transition: 0.1s ease-in;
+  cursor: pointer;
 }
 
 .btn-dark,
