--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,4 @@
-$primary-color: rgb(62, 194, 132);
-$secondary-color: rgb(62, 190, 194);
+$primary-color: #00eff4;
+$secondary-color: #8151f2;
 $dark-color: #333;
 $light-color: rgb(221, 218, 218);
