--- a/scss/main.scss
+++ b/scss/main.scss
@@ -55,7 +55,7 @@ br {
   height: 100vh;
   position: relative;
   color: #fff;
-
+  z-index: 0;
   & .content {
     display: flex;
     flex-direction: column;
@@ -64,6 +64,7 @@ br {
     text-align: center;
     height: 100%;
     padding: 0 20px;
+    position: relative;
 
     & h1 {
       font-size: 2.5rem;
@@ -84,10 +85,6 @@ br {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.55);
-  }
-
-  & * {
-    z-index: 10;
   }
 }
 
